fix: bugs + favorites + courses links
* fix(locations): all courses locations are shown

* fix(courses): show firstname of teachers

* feat(courses-modal):  add courses link

* feat(icon): add online icon for online courses

* feat(selector): can un/select courses in fav

* fix(flashbang): all school courses popup when changing from "salles" to "courses"

* fix(scrollbar): color

--- a/src/components/EventCard.css
+++ b/src/components/EventCard.css
@@ -70,6 +70,13 @@
   -webkit-box-orient: vertical;
 }
 
+.online-badge-icon {
+  margin-right: 4px;
+  vertical-align: middle;
+  display: inline-block;
+  opacity: 0.9;
+}
+
 .event-card-time {
   font-size: 11px;
   color: inherit;
